Fix events overflow

--- a/src/style.scss
+++ b/src/style.scss
@@ -30,6 +30,7 @@
   .z-week {
     height: 16.667%;
     position: relative;
+    overflow: hidden;
   }
 
   .z-week-skeleton {
